--- a/_src/posts/2019-09-08-map-snip.md
+++ b/_src/posts/2019-09-08-map-snip.md
@@ -1,6 +1,6 @@
     Title: Interactive Maps in the DrRacket REPL
     Date: 2019-09-08T07:54:13
-    Tags: racket
+    Tags: racket, data visualization
     Thumbnail: /img/a029/thumb.png
 
 I updated the [map-widget package][mw] to allow map objects to
