Tweaks to site visuals

--- a/_src/posts/2019-09-08-map-snip.md
+++ b/_src/posts/2019-09-08-map-snip.md
@@ -18,7 +18,7 @@ resulting map snip will be displayed in the REPL, as shown in the image below.
 with the mouse and zoom in and out using the "up" and "down" keys -- you
 cannot see that in the image, you will have to try it out yourself:
 
-![](/img/a029/map-snip.png)
+![Map Snip Demo in the DrRacket REPL](/img/a029/map-snip.png)
 
 ## User interaction with a `map-snip%` in the REPL
 
